# jquants-daily-report

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  SKILLS.md  example_report_generation.py  pyproject.toml
docs/: DATA_MODULE.md
examples/: api_usage_example.py  data_usage_example.py  sample_daily_report.md  sample_weekly_report.md
src/jquants_report/: __init__.py  __main__.py  config.py  main.py
src/jquants_report/analysis/: __init__.py  market.py  sector.py  stocks.py  supply_demand.py  technical.py
src/jquants_report/analysis/weekly/: __init__.py  events.py  investor.py  margin.py  market.py  sector.py  stocks.py  technical.py  topics.py  trends.py
src/jquants_report/api/: README.md  __init__.py  auth.py  client.py  endpoints.py
src/jquants_report/data/: __init__.py  cache.py  fetcher.py  processor.py  weekly_aggregator.py
src/jquants_report/report/: README.md  __init__.py  formatter.py  generator.py  templates.py  weekly_generator.py  weekly_templates.py  weekly_types.py
tests/: __init__.py  test_analysis.py  test_api.py  test_cache.py  test_data_fetcher.py  test_data_processor.py  test_report.py
